<resources>
    <string name="app_name">Society</string>
    <string name="text_email_login">Username/Email</string>
    <string name="password_login">Password</string>
    <string name="button_login">Login</string>
    <string name="username_email">USERNAME/EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="nama_dpn">NAMA DEPAN</string>
    <string name="nama_blkng">NAMA BELAKANG</string>
    <string name="email">EMAIL</string>
    <string name="password_register">PASSWORD</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="nama">HOB-HUB</string>
    <string name="text1">ISI DATA DIRI ANDA DENGAN LENGKAP YA!</string>
    <string name="daftar">DAFTAR</string>
    <string name="disukai">Disukai</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_nclick_to_register">Don\'t have an Account?\nClick to Register</string>
    <string name="login">Login</string>
    <string name="password2">Password :</string>
    <string name="email2">Email :</string>
    <string name="logijn2">LOGIN</string>
    <string name="create_account">Create Account</string>
    <string name="do_not_have_an_account">Do not have an Account?</string>
    <string name="upload">Uploading</string>
    <string name="select">Select</string>
    <string name="login_shared">com.example.society_try</string>
    <string name="search">Search</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tanggal">tanggal</string>
    <string name="_2311">0</string>
    <string name="complete_your_data">COMPLETE YOUR DATA!</string>
    <string name="fn">First Name</string>
    <string name="fn2">Your First Name</string>
    <string name="ln">Last Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="youraddress">YourAddress</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Your Phone Number</string>
    <string name="e">Email</string>
    <string name="your_email_for_login">Your Email For Login</string>
    <string name="p">Password</string>
    <string name="re_type_your_password">Re-Type your password</string>
    <string name="axx">Put your priority to let us show your /n recommended community!</string>
    <string name="desc">Komunitas ini adalah komunitas yang bergerak pada bidang musik, dengan anggota yang sudah dapat dibilang banyak komunitas ini juga sangat rekomen sekali bagi para pemuda yang ingin mengembangkan potensinya pada \n bidang musik, pemuda juga dapattampil pada event mingguan yang kita tayankan tiap tahunnya, seperti lomba pentas seni dan lain lain.</string>
</resources>
