<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_register"
    android:background="@drawable/register2"
    tools:context="com.example.activity.ActivityRegister">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo_putih"
            android:id="@+id/logo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/complete_your_data"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/fn"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:gravity="left"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            />
        <EditText
            android:id="@+id/namaDepan"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:hint="@string/fn2"
            android:inputType="textPersonName"
            android:paddingLeft="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/ln"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:gravity="left"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            />
        <EditText
            android:id="@+id/namaBelakang"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:hint="@string/your_last_name"
            android:inputType="textPersonName"
            android:paddingLeft="15sp"
            android:gravity="center"
            android:layout_gravity="center"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Adress"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:gravity="left"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            />
        <EditText
            android:id="@+id/alamat"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/youraddress"
            android:inputType="textPersonName"
            android:paddingLeft="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/phone_number"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:gravity="left"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            />
        <EditText
            android:id="@+id/nomorTlp"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/e"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:gravity="left"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            />
        <EditText
            android:id="@+id/email_register"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/your_email_for_login"
            android:inputType="textEmailAddress"
            android:paddingLeft="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/p"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:gravity="left"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            />
        <EditText
            android:id="@+id/password_register"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/your_email_for_login"
            android:inputType="textPassword"
            android:paddingLeft="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/re_type_your_password"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:gravity="left"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            />
        <EditText
            android:id="@+id/rePassword"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/your_email_for_login"
            android:inputType="textPassword"
            android:paddingLeft="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/buttonRegister"
            style="@style/blueButton"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>