<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="261dp"
        android:layout_height="38dp"
        android:layout_marginTop="480dp"
        android:autoText="false"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/text_email_login"
        android:inputType="textPersonName"
        android:paddingLeft="15px"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password"
        android:layout_width="261dp"
        android:layout_height="38dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:paddingLeft="15px"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/login"
        style="@style/blueButton"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_login"
        android:textColor="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/register"
        style="@style/blueButton"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:textColor="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/username_email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="368dp"
        android:layout_height="169dp"
        android:layout_marginStart="40dp"
        android:accessibilityLiveRegion="none"
        android:background="#00FFFFFF"
        android:fadeScrollbars="false"
        android:scaleType="fitStart"
        android:tintMode="add"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/unnamed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="187dp"
        android:layout_height="76dp"
        android:fontFamily="@font/roboto_bold"
        android:text="HOB-HUB"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>