<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/list"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    >

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="20dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:src="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="9dp">

                    <com.like.LikeButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:id="@+id/like"
                        app:icon_type="heart"
                        app:icon_size="20dp"
                        app:liked="false"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    app:cardCornerRadius="9dp">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/tv_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="9dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Jajang"
                        android:textColor="@color/black_feel"
                        android:textSize="10dp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="310dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/hitam"
                    tools:text="Judul" />

                <View
                    android:id="@+id/garis"
                    android:layout_width="wrap_content"
                    android:layout_height="3dp"
                    android:layout_below="@+id/linear"
                    android:background="@color/black_feel"
                    android:visibility="visible" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_detail"
                    android:text="@string/deskripsi"
                    android:maxLines="3"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:id="@+id/tv_item_tanggal"
        android:text="@string/tanggal"
        android:textColor="@color/hitam"
        android:background="@drawable/rounded_edittext"
        android:maxLines="3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="5dp"
        android:id="@+id/tv_love"
        android:text="@string/_2311"
        android:textColor="@color/hitam"
        android:background="@drawable/rounded_edittext"
        android:maxLines="3"
        />
</RelativeLayout>